BloodBank_app_Code/blood-bank/db-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
spec:
  ClusterIP: None
  selector:
    app: bankapp-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
